Bug 28067 - FAIL: posix/tst-spawn5
Summary: FAIL: posix/tst-spawn5
Status: RESOLVED FIXED
Alias: None
Product: glibc
Classification: Unclassified
Component: libc (show other bugs)
Version: 2.34
: P2 normal
Target Milestone: 2.34
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-07-08 21:53 UTC by H.J. Lu
Modified: 2021-07-09 13:43 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2021-07-08 21:53:00 UTC
On x86-64, under kernel 5.12.15,

commit bba4383c6b4db09c84c7a194b5e80978e6c44ee5
Author: Joseph Myers <joseph@codesourcery.com>
Date:   Thu Jul 8 17:36:27 2021 +0000

    Add NT_ARM_PAC_ENABLED_KEYS to elf.h

gave me:

FAIL: posix/tst-spawn5

[hjl@gnu-tgl-2 build-x86_64-linux]$ cat posix/tst-spawn5.out 
tst-spawn5.c:159: numeric comparison failure
   left: 2 (0x2); from: posix_spawn (&pid, args[0], fa, NULL, args, environ)
  right: 0 (0x0); from: 0
error: xwaitpid.c:31: waitpid: No child processes

error: 2 test failures
tst-spawn5.c:163: numeric comparison failure
   left: 1 (0x1); from: WEXITSTATUS (status)
  right: 0 (0x0); from: 0
tst-spawn5.c:159: numeric comparison failure
   left: 2 (0x2); from: posix_spawn (&pid, args[0], fa, NULL, args, environ)
  right: 0 (0x0); from: 0
error: xwaitpid.c:31: waitpid: No child processes

error: 2 test failures
tst-spawn5.c:163: numeric comparison failure
   left: 1 (0x1); from: WEXITSTATUS (status)
  right: 0 (0x0); from: 0
tst-spawn5.c:159: numeric comparison failure
   left: 2 (0x2); from: posix_spawn (&pid, args[0], fa, NULL, args, environ)
  right: 0 (0x0); from: 0
error: xwaitpid.c:31: waitpid: No child processes

error: 2 test failures
tst-spawn5.c:163: numeric comparison failure
   left: 1 (0x1); from: WEXITSTATUS (status)
  right: 0 (0x0); from: 0
tst-spawn5.c:159: numeric comparison failure
   left: 2 (0x2); from: posix_spawn (&pid, args[0], fa, NULL, args, environ)
  right: 0 (0x0); from: 0
error: xwaitpid.c:31: waitpid: No child processes

error: 2 test failures
tst-spawn5.c:163: numeric comparison failure
   left: 1 (0x1); from: WEXITSTATUS (status)
  right: 0 (0x0); from: 0
tst-spawn5.c:159: numeric comparison failure
   left: 2 (0x2); from: posix_spawn (&pid, args[0], fa, NULL, args, environ)
  right: 0 (0x0); from: 0
error: xwaitpid.c:31: waitpid: No child processes

error: 2 test failures
tst-spawn5.c:163: numeric comparison failure
   left: 1 (0x1); from: WEXITSTATUS (status)
  right: 0 (0x0); from: 0
error: 5 test failures
[hjl@gnu-tgl-2 build-x86_64-linux]$
Comment 1 Sourceware Commits 2021-07-09 13:39:05 UTC
The master branch has been updated by H.J. Lu <hjl@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=glibc.git;h=0ec97597c859ac6a69733cf70c6bd6fc809dcc4b

commit 0ec97597c859ac6a69733cf70c6bd6fc809dcc4b
Author: H.J. Lu <hjl.tools@gmail.com>
Date:   Fri Jul 9 05:57:51 2021 -0700

    Properly run tst-spawn5 directly [BZ #28067]
    
    Change tst-spawn5.c to handle tst-spawn5 without optional path to ld.so,
    --library-path nor the library path when glibc is configured with
    --enable-hardcoded-path-in-tests.  This fixes BZ #28067.
    
    Reviewed-by: Adhemerval Zanella  <adhemerval.zanella@linaro.org>
Comment 2 H.J. Lu 2021-07-09 13:43:34 UTC
Fixed.